@@ -1,52 +1,51 @@
 package io.github.gunkim.application.spring.security.provider;
 
+import static java.util.Objects.isNull;
+
 import io.github.gunkim.application.spring.security.service.CustomUserDetailsService;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
 @Component
-public class AsyncAuthenticationProvider implements AuthenticationProvider {
+public class JwtTokenIssueProvider implements AuthenticationProvider {
     private final PasswordEncoder passwordEncoder;
     private final CustomUserDetailsService customUserDetailsService;
 
-    public AsyncAuthenticationProvider(PasswordEncoder passwordEncoder,
-        CustomUserDetailsService customUserDetailsService) {
+    public JwtTokenIssueProvider(final PasswordEncoder passwordEncoder,
+        final CustomUserDetailsService customUserDetailsService) {
         this.passwordEncoder = passwordEncoder;
         this.customUserDetailsService = customUserDetailsService;
     }
 
     @Override
-    public Authentication authenticate(Authentication authentication) throws AuthenticationException {
-        if (authentication == null) {
+    public Authentication authenticate(final Authentication authentication) throws AuthenticationException {
+        if (isNull(authentication)) {
             throw new IllegalArgumentException("authentication 발급 오류");
         }
 
-        String username = (String) authentication.getPrincipal();
-        String password = (String) authentication.getCredentials();
+        final var username = (String) authentication.getPrincipal();
+        final var password = (String) authentication.getCredentials();
 
-        UserDetails user = customUserDetailsService.loadUserByUsername(username);
-
+        final var user = customUserDetailsService.loadUserByUsername(username);
         if (!passwordEncoder.matches(password, user.getPassword())) {
             throw new BadCredentialsException("인증 실패. username or password 불일치");
         }
-        List<GrantedAuthority> authorities = user.getAuthorities().stream()
-            .map(authority -> new SimpleGrantedAuthority(authority.getAuthority())).collect(Collectors.toList());
+
+        List<SimpleGrantedAuthority> authorities = user.getAuthorities().stream()
+            .map(authority -> new SimpleGrantedAuthority(authority.getAuthority())).toList();
 
         return new UsernamePasswordAuthenticationToken(user.getUsername(), null, authorities);
     }
 
     @Override
-    public boolean supports(Class<?> authentication) {
+    public boolean supports(final Class<?> authentication) {
         return (UsernamePasswordAuthenticationToken.class.isAssignableFrom(authentication));
     }
 }
